--- a/app/src/main/res/drawable/btn_background.xml
+++ b/app/src/main/res/drawable/btn_background.xml
@@ -3,4 +3,4 @@
     android:shape="rectangle">
     <solid android:color="@color/colorAccent"/>
     <corners android:radius="40dp" />
-</shape>git
+</shape>
