--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
     <item
         android:id="@+id/menu_delete_all"
@@ -8,6 +9,11 @@
         app:showAsAction="never" />
     <item android:id="@+id/delete_completed"
         android:title="Delete Completed" />
+    <item
+        android:id="@+id/menu_2"
+        android:title="@string/share"
+        />
+
     <item android:id="@+id/menu_logout"
         android:title="Exit"
         app:showAsAction="never"/>
